Updated Portfolio Page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <!-- header HTML -->
     <header>
         <!-- Nav HTML -->
-        <div class="logo"></div>
-        <nav>
+        
+        <nav class="inline-block">
+            <div class="logo">
+                <img src="images/Logo.PNG">
+            </div>
             <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">Resume</a></li>
             </ul>
         </nav>
+        
     </header>
 <!-- Hi! I'm Danielle Clifford -->
-<div>
+<div class="aboutme1">
     <h1>
         Hi! I'm <br>
         Danielle <br>
@@ -29,8 +33,14 @@
         I'm a UX Designer and Illustrator<br>
         based in Minneapolis, MN
     </h3>
+    <div class="aboutmeimage1">
+        <img src="images/DanielleClifford.jpg">
+    </div>
 </div>
-<div>
+<div class="aboutme2">
+    <div class="aboutmeimage2">
+        <img src="images/0039.jpg">
+    </div>
     <h1>About Me</h1>
     <h5>Over the last few years I have been working on developing my 
         graphic design chops and made a huge leap in that learning through 
@@ -107,6 +117,8 @@
         danielle.e.clifford@gmail.com<br>
         612-599-2319</p>
 
-        <div class="logo"></div>
+        <div class="logo">
+            <img src="images/Logo.PNG">
+        </div>
     </footer>
 </body>
