Main Portfolio Page Adding to the Footer, Adding Grids

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Danielle Clifford's Porfolio Homepage</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <!-- Body is going below here -->
 <body>
@@ -24,39 +28,47 @@
     </header>
 <!-- Hi! I'm Danielle Clifford -->
 <div class="aboutme1">
-    <h1>
+    <div id="aboutme1">
+        <h1>
         Hi! I'm <br>
         Danielle <br>
         Clifford
-    </h1>
-    <h3>
+        </h1>
+    </div>
+    <div id="shortdesc">
+        <h3>
         I'm a UX Designer and Illustrator<br>
         based in Minneapolis, MN
-    </h3>
-    <div class="aboutmeimage1">
+        </h3>
+    </div>
+    <div id="aboutmeimage1">
         <img src="images/DanielleClifford.jpg">
     </div>
 </div>
 <div class="aboutme2">
-    <div class="aboutmeimage2">
+    <div id="aboutmeimage2">
         <img src="images/0039.jpg">
     </div>
+    <div id="aboutme2">
     <h1>About Me</h1>
-    <h5>Over the last few years I have been working on developing my 
-        graphic design chops and made a huge leap in that learning through 
-        the University of Minnesota's UX/UI Design Certificate Program. I 
-        recently graduated from this program and this fast-paced class 
-        with a hands-on learning environment had industry professionals 
-        working with students to teach us the tricks of the trade. I worked 
-        regularly on all of the pieces of a user-centered design process 
-        throughout this class.
+    </div>
+    <div id="shortdesc2">
+        <h5>Over the last few years I have been working on developing my 
+            graphic design chops and made a huge leap in that learning through 
+            the University of Minnesota's UX/UI Design Certificate Program. I 
+            recently graduated from this program and this fast-paced class 
+            with a hands-on learning environment had industry professionals 
+            working with students to teach us the tricks of the trade. I worked 
+            regularly on all of the pieces of a user-centered design process 
+            throughout this class.
 
-        Previous experience working in a Clinical Research Laboratory 
-        helps me with my work as a UX designer and researcher by being 
-        highly organized and motivated to learn from failures and be 
-        humble enough to put that knowledge into practice.
-        When I'm not honing my UX design skills, I am a mom of twin three 
-        year olds, a muralist, and I'm always drinking all the beverages.</h5>
+            Previous experience working in a Clinical Research Laboratory 
+            helps me with my work as a UX designer and researcher by being 
+            highly organized and motivated to learn from failures and be 
+            humble enough to put that knowledge into practice.
+            When I'm not honing my UX design skills, I am a mom of twin three 
+            year olds, a muralist, and I'm always drinking all the beverages.</h5>
+        </div>
 </div>
 <!-- Work -->
 <div class="MyWork">
