Fixed the Skills sections and added some hover states

--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
 </div>
 <!-- Work -->
 <div class="MyWork">
+    
+    <div id="myworktitle">
     <h1>My Work</h1>
+    </div>
+    <div id="mywork1">
     <h2>Gifts for Seniors</h2>
     <h4>Non-Profit Website Redesign</h4>
+    </div>
     <img src="images/Rectangle 1.png">
         <div class="more">
             <h2>More</h2>
@@ -95,6 +100,7 @@
 <!-- skills section -->
     <div class="skills">
     <h1>My Skills & Tools Used</h1>
+    <div id="skills">
     <h4 class="card">
         User Persona Creation<br>
         User Interviews<br>
@@ -120,6 +126,7 @@
         HTML / CSS<br>
         Procreate
     </h4>
+    </div>
     </div>
 
     <!-- footer HTML -->
